--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "dantleech/maestro",
-    "description": "Description about my project",
+    "description": "Co-ordinate and manage micro packages",
     "license": "MIT",
     "type": "phpactor-extension",
     "authors": [
@@ -11,12 +11,13 @@
     ],
 
     "require": {
-        "phpactor/container": "^1.0"
+        "phpactor/console-extension": "^0.1.1",
+        "phpunit/phpunit": "^8.0",
+        "phpstan/phpstan": "^0.11.4"
     },
     "require-dev": {
-        "phpstan/phpstan": "^0.11.4",
-        "phpunit/phpunit": "^8.0",
-        "friendsofphp/php-cs-fixer": "^2.14"
+        "friendsofphp/php-cs-fixer": "^2.13",
+        "phpactor/test-utils": "^1.0"
     },
     "autoload": {
         "psr-4": {
