--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "webmozart/path-util": "^2.3",
         "phpactor/config-loader": "^0.1.0",
         "amphp/amp": "^2.1",
-        "amphp/process": "^1.1"
+        "amphp/process": "^1.1",
+        "twig/twig": "^2.8"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
