--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,6 @@
 
     "require": {
         "phpactor/console-extension": "^0.1.1",
-        "phpunit/phpunit": "^8.0",
-        "phpstan/phpstan": "^0.11.4",
         "webmozart/path-util": "^2.3",
         "phpactor/config-loader": "^0.1.0",
         "amphp/amp": "^2.1",
@@ -22,7 +20,9 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
-        "phpactor/test-utils": "^1.0"
+        "phpactor/test-utils": "^1.0",
+        "phpunit/phpunit": "^8.0",
+        "phpstan/phpstan": "^0.11.4"
     },
     "autoload": {
         "psr-4": {
