--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "friendsofphp/php-cs-fixer": "^2.13",
         "phpactor/test-utils": "^1.0",
         "phpunit/phpunit": "^8.0",
-        "phpstan/phpstan": "^0.11.4"
+        "phpstan/phpstan": "^0.11.4",
+        "symfony/property-access": "^4.2"
     },
     "autoload": {
         "psr-4": {
