--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,8 @@
 
     "require": {
         "php": "^7.3",
-        "phpactor/console-extension": "^0.1.1",
         "webmozart/path-util": "^2.3",
-        "phpactor/config-loader": "^0.1.0",
-        "amphp/amp": "^2.1",
-        "amphp/process": "^1.1",
-        "twig/twig": "^2.8"
+        "amphp/amp": "^2.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
