--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "php": "^7.3",
         "phpactor/console-extension": "^0.1.1",
         "webmozart/path-util": "^2.3",
-        "amphp/amp": "^2.1"
+        "amphp/amp": "^2.1",
+        "phpactor/logging-extension": "^0.3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
