--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "amphp/amp": "^2.1",
         "phpactor/logging-extension": "^0.3.1",
         "dnoegel/php-xdg-base-dir": "^0.1.0",
-        "amphp/process": "^1.1"
+        "amphp/process": "^1.1",
+        "twig/twig": "^2.11"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
