--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "phpactor/test-utils": "^1.0",
         "phpunit/phpunit": "^8.0",
         "phpstan/phpstan": "^0.11.4",
-        "symfony/property-access": "^4.2"
+        "symfony/property-access": "^4.2",
+        "captainhook/captainhook": "~4.0"
     },
     "autoload": {
         "psr-4": {
