--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "phpactor/logging-extension": "^0.3.1",
         "dnoegel/php-xdg-base-dir": "^0.1.0",
         "amphp/process": "^1.1",
-        "twig/twig": "^2.11"
+        "twig/twig": "^2.11",
+        "thecodingmachine/safe": "^0.1.16"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
