--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "dantleech/maestro",
     "description": "Co-ordinate and manage micro packages",
     "license": "MIT",
-    "type": "phpactor-extension",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "authors": [
         {
             "name": "Daniel Leech",
@@ -23,7 +24,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
-        "phpactor/test-utils": "^1.0",
+        "phpactor/test-utils": "^1.0.1",
         "phpunit/phpunit": "^8.0",
         "phpstan/phpstan": "^0.11.4",
         "symfony/property-access": "^4.2",
