--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,5 @@ before_script:
 script:
     - ./vendor/bin/php-cs-fixer fix --dry-run
     - ./vendor/bin/phpstan analyse --level=7 lib
-    - ./vendor/bin/phpunit
+    - ./vendor/bin/phpunit --exclude-group=tmux
+    - tmux new -s maestro-test "./vendor/bin/phpunit --group=tmux"
