Use composer scripts in travis

--- a/composer.json
+++ b/composer.json
@@ -49,11 +49,11 @@
     "scripts": {
         "test": [
             "@php-cs-fixer",
-            "@phpunit",
-            "@phpstan"
+            "@phpstan",
+            "@phpunit"
         ],
         "phpstan": "./vendor/bin/phpstan analyse --level=7 --ansi src",
         "php-cs-fixer": "./vendor/bin/php-cs-fixer fix --ansi --dry-run",
-        "phpunit": "./vendor/bin/phpunit --colors=always --exclude-group=tmux"
+        "phpunit": "./vendor/bin/phpunit --colors=always"
     }
 }
