--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,6 @@ before_script:
     - composer install
 
 script:
-    - composer test
+    - composer phpstan
+    - composer php-cs-fixer
+    - ./vendor/bin/phpunit --exclude-group=tmux
