--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "dnoegel/php-xdg-base-dir": "^0.1.0",
         "amphp/process": "^1.1",
         "twig/twig": "^2.11",
-        "thecodingmachine/safe": "^0.1.16"
+        "thecodingmachine/safe": "^0.1.16",
+        "amphp/http-client": "^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
