--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "phpunit/phpunit": "^8.0",
         "phpstan/phpstan": "^0.11.4",
         "symfony/property-access": "^4.2",
-        "captainhook/captainhook": "~4.0"
+        "captainhook/captainhook": "~4.0",
+        "symfony/debug": "^4.3",
+        "symfony/var-dumper": "^4.3"
     },
     "autoload": {
         "psr-4": {
