--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "amphp/process": "^1.1",
         "twig/twig": "^2.11",
         "thecodingmachine/safe": "^0.1.16",
-        "amphp/http-client": "^3.0"
+        "amphp/http-client": "^3.0",
+        "sensiolabs-de/deptrac": "^0.5.0",
+        "sensiolabs-de/deptrac-shim": "^0.5.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
