--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "thecodingmachine/safe": "^0.1.16",
         "amphp/http-client": "^3.0",
         "sensiolabs-de/deptrac": "^0.5.0",
-        "sensiolabs-de/deptrac-shim": "^0.5.0"
+        "sensiolabs-de/deptrac-shim": "^0.5.0",
+        "pahanini/monolog-cli-formatter": "^1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
