--- a/depfile.yml
+++ b/depfile.yml
@@ -84,6 +84,10 @@ ruleset:
     lib-git:
         - lib-vcs
         - lib-script
+        - lib-support
+
+    lib-vcs:
+        - lib-support
 
     lib-graph:
         - lib-task
