Call integrate in CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,4 @@ before_script:
     - composer install
 
 script:
-    - composer phpstan
-    - composer php-cs-fixer
-    - vendor/bin/phpunit --exclude-group=tmux
-    - vendor/bin/deptrac
+    - composer integrate
