--- a/composer.json
+++ b/composer.json
@@ -58,14 +58,13 @@
       "@phpstan",
       "@deptrac",
       "@phpunit",
-      "@examples",
-      "@docs"
+      "@examples"
     ],
     "deptrac": "./vendor/bin/deptrac",
     "phpstan": "./vendor/bin/phpstan analyse --level=7 --ansi src",
     "php-cs-fixer": "./vendor/bin/php-cs-fixer fix --ansi --dry-run",
     "phpunit": "./vendor/bin/phpunit --colors=always",
-    "docs": "make -C./doc html",
-    "examples": "./bin/test_examples"
+    "examples": "./bin/test_examples",
+    "docs": "make -C./doc html"
   }
 }
