--- a/example/project.json
+++ b/example/project.json
@@ -1,7 +1,7 @@
 {
     "packages": {
-        "phpactor/path-finder": {
-            "url": "git@github.com:phpactor/path-finder",
+        "maestrophp/example-math": {
+            "url": "https://github.com:maestrophp/example-math",
             "tasks": {
                 "composer.json": {
                     "type": "json_file",
@@ -25,8 +25,8 @@
                 }
             }
         },
-        "phpactor/container": {
-            "url": "git@github.com:phpactor/container",
+        "maestrophp/example-science": {
+            "url": "https://github.com:maestrophp/example-science",
             "tasks": {
                 "composer.json": {
                     "type": "json_file",
