--- a/example/project.json
+++ b/example/project.json
@@ -47,7 +47,7 @@
                 "phpunit": {
                     "type": "script",
                     "args": {
-                        "script": "./vendor/bin/phpunit"
+                        "script": "./vendor/bin/phpunit --version"
                     },
                     "depends": [ "composer install" ]
                 }
