--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "twig/twig": "^2.11",
     "thecodingmachine/safe": "^0.1.16",
     "amphp/http-client": "^3.0",
-    "bramus/monolog-colored-line-formatter": "^3.0"
+    "bramus/monolog-colored-line-formatter": "^3.0",
+    "symfony/filesystem": "^4.0"
   },
   "require-dev": {
     "sensiolabs-de/deptrac-shim": "^0.5.0",
