--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "amphp/http-client": "^3.0",
     "bramus/monolog-colored-line-formatter": "^3.0",
     "symfony/filesystem": "^4.0",
-    "phpactor/config-loader": "^0.1.1"
+    "phpactor/config-loader": "^0.1.1",
+    "symfony/serializer": "^4.3"
   },
   "require-dev": {
     "sensiolabs-de/deptrac-shim": "^0.5.0",
