--- a/example/project.json
+++ b/example/project.json
@@ -1,13 +1,13 @@
 {
     "nodes": {
         "noteistig/example-math": {
-            "type": "package_init",
+            "type": "package",
             "args": {
                 "url": "http://dantleech.com/not"
             }
         },
         "maestrophp/example-math": {
-            "type": "package_init",
+            "type": "package",
             "args": {
                 "url": "https://github.com/maestrophp/example-math"
             },
@@ -33,7 +33,7 @@
             }
         },
         "maestrophp/example-science": {
-            "type": "package_init",
+            "type": "package",
             "args": {
                 "url": "https://github.com/maestrophp/example-science"
             },
