Support importing globs

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "symfony/filesystem": "^4.0",
     "phpactor/config-loader": "^0.1.1",
     "symfony/serializer": "^4.3",
-    "symfony/property-access": "^4.3"
+    "symfony/property-access": "^4.3",
+    "webmozart/glob": "^4.1"
   },
   "require-dev": {
     "sensiolabs-de/deptrac-shim": "^0.5.0",
