Removed references to init and package vars
Replaced by per-node vars

--- a/depfile.yml
+++ b/depfile.yml
@@ -117,6 +117,7 @@ ruleset:
         - lib-task
         - lib-instantiator
         - lib-artifact
+        - lib-support
 
     lib-task:
         - lib-instantiator
