--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     "phpstan/phpstan": "^0.11.4",
     "captainhook/captainhook": "~4.0",
     "symfony/debug": "^4.3",
-    "symfony/var-dumper": "^4.3"
+    "symfony/var-dumper": "^4.3",
+    "symfony/process": "^4.3"
   },
   "autoload": {
     "psr-4": {
