--- a/composer.json
+++ b/composer.json
@@ -23,12 +23,12 @@
     "thecodingmachine/safe": "^0.1.16",
     "amphp/http-client": "^3.0",
     "bramus/monolog-colored-line-formatter": "^3.0",
-    "symfony/filesystem": "^4.0",
+    "symfony/filesystem": "^4.0|^5.0",
     "phpactor/config-loader": "^0.1.1",
-    "symfony/serializer": "^4.3",
-    "symfony/property-access": "^4.3",
+    "symfony/serializer": "^4.3|^5.0",
+    "symfony/property-access": "^4.3|^5.0",
     "webmozart/glob": "^4.1",
-    "symfony/expression-language": "^4.3"
+    "symfony/expression-language": "^4.3|^5.0"
   },
   "require-dev": {
     "sensiolabs-de/deptrac-shim": "^0.5.0",
@@ -37,9 +37,9 @@
     "phpunit/phpunit": "^8.0",
     "phpstan/phpstan": "^0.11.4",
     "captainhook/captainhook": "~4.0",
-    "symfony/debug": "^4.3",
-    "symfony/var-dumper": "^4.3",
-    "symfony/process": "^4.3"
+    "symfony/debug": "^4.3|^5.0",
+    "symfony/var-dumper": "^4.3|^5.0",
+    "symfony/process": "^4.3|^5.0"
   },
   "autoload": {
     "psr-4": {
